Transpiler: Anpassungen für das spätere Transpilieren von mehreren Unterprojekten und dem dazugehörigen zusammenfassen der Ergebnisse