@@ -1,39 +1,12 @@
 configurations {
 	implementation.extendsFrom(crypto, database, jackson, jetty, resteasy, swagger, pdf)
+	api
 }
 
 compileJava.dependsOn(":svws-db:assemble")
 compileJava.dependsOn(":svws-db-utils:assemble")
 compileJava.dependsOn(":svws-module-reporting:assemble")
 compileJava.dependsOn(":svws-module-dav-api:assemble")
-
-/* TODO Support JPMS-Modules
-extraJavaModuleInfo {
-    automaticModule("apache-mime4j-core-0.8.3.jar", "org.apache.james.mime4j")
-    automaticModule("apache-mime4j-dom-0.8.3.jar", "org.apache.james.mime4j.dom")
-    automaticModule("apache-mime4j-storage-0.8.3.jar", "org.apache.james.mime4j.storage")
-    automaticModule("asyncutil-0.1.0.jar", "com.ibm.asyncutil")
-    automaticModule("btf-1.3.jar", "com.github.fge")
-    automaticModule("commons-io-2.5.jar", "org.apache.commons.io")
-    automaticModule("commons-logging-1.2.jar", "org.apache.commons.logging")
-    automaticModule("jackson-coreutils-2.0.jar", "com.github.fge.jackson")
-    automaticModule("javassist-3.22.0-GA.jar", "javaassist")
-    automaticModule("json-patch-1.13.jar", "com.github.fge.jsonpatch")
-    automaticModule("microprofile-config-api-1.4.jar", "org.eclipse.microprofile.config")
-    automaticModule("msg-simple-1.2.jar", "com.github.fge.msgsimple")
-    automaticModule("resteasy-core-4.5.8.Final.jar", "org.jboss.resteasy.core")
-    automaticModule("resteasy-core-spi-4.5.8.Final.jar", "org.jboss.resteasy.spi")
-    automaticModule("resteasy-client-4.5.8.Final.jar", "org.jboss.resteasy.client")
-	automaticModule("resteasy-client-api-4.5.8.Final.jar", "org.jboss.resteasy.client.api")
-    automaticModule("resteasy-jackson2-provider-4.5.8.Final.jar", "org.jboss.resteasy.providers.jackson")
-    automaticModule("resteasy-jaxb-provider-4.5.8.Final.jar", "org.jboss.resteasy.providers.jaxb")
-    automaticModule("resteasy-multipart-provider-4.5.8.Final.jar", "org.jboss.resteasy.providers.multipart")
-    automaticModule("slf4j-api-1.7.25.jar", "org.slf4j")
-    automaticModule("smallrye-config-1.6.1.jar", "io.smallrye.config")
-    automaticModule("smallrye-config-common-1.6.1.jar", "io.smallrye.config.common")
-    automaticModule("swagger-ui-dist-3.35.0.jar", "io.swagger.ui.dist")
-}
-*/
 
 dependencies {
 	implementation project(':svws-core')
@@ -42,7 +15,70 @@ dependencies {
 	implementation project(':svws-db-utils')
 	implementation project(':svws-module-reporting')
     implementation project(':svws-module-dav-api')
+    
+    api fileTree(dir: "$projectDir/src/main/java", includes: ['**/svws_nrw/api/server/*.java', '**/svws_nrw/api/privileged/API*.java'])
 }
+
+task cleanTranspiled(type: Delete) {
+	group "build"
+	delete fileTree(dir: "$buildDir/tsapi"), fileTree(dir: "$buildDir/tmp/transpiler/tsapi", includes: ["**/*.class"])
+}
+
+task prepareTranspile {
+	doLast {
+		file("$buildDir/transpiler-api-files.txt").text = configurations.api.files.toString().replace("[", "").replace("]", "").trim()
+	}
+	group "build"
+	dependsOn compileJava
+	inputs.files configurations.api
+	outputs.files "$buildDir/transpiler-api-files.txt"
+}
+
+task transpile(type: JavaExec) {
+	group "build"
+	dependsOn compileJava
+	dependsOn prepareTranspile
+	dependsOn project(":svws-core").tasks.assemble
+	dependsOn project(':svws-transpile').tasks.assemble
+	doFirst {
+		delete fileTree(dir: "$buildDir/tsapi"), fileTree(dir: "$buildDir/tmp/transpiler/tsapi", includes: ["**/*.class"])
+	}
+	inputs.files "$buildDir/transpiler-api-files.txt", configurations.api.files
+	outputs.dir "$buildDir/tsapi"
+	description = "Transpiliert den Java-Code nach Typescript"
+	classpath = sourceSets.main.runtimeClasspath
+	mainClass = "de.svws_nrw.transpiler.app.GenerateTsOpenApi"
+	args "--output", "$buildDir/tsapi",
+		"--ignore", "de.svws_nrw",
+		"--tmpdir", "$buildDir/tmp/transpiler/tsapi",
+		"--files", "$buildDir/transpiler-api-files.txt"
+	jvmArgs "--add-opens", "jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED"
+}
+
+task assembleTranspiled(type: Copy) {
+	group "build"
+	dependsOn project(":svws-core").tasks.transpile
+	dependsOn transpile
+	inputs.dir "$rootDir/svws-core/build/ts"
+	inputs.dir "$buildDir/tsapi"
+	outputs.dir "$rootDir/svws-webclient/core/src"
+	doFirst {
+		delete fileTree(dir: "$rootDir/svws-webclient/core/src", includes: ["**/*.ts"])
+	}
+	from "$rootDir/svws-core/build/ts"
+	from "$buildDir/tsapi"
+	into "$rootDir/svws-webclient/core/src"
+	include "**/*.ts"
+	exclude "index.ts"
+	doLast {
+		(new File("$rootDir/svws-webclient/core/src/index.ts")).text = file("$rootDir/svws-core/build/ts/index.ts").getText() + file("$buildDir/tsapi/index.ts").getText()
+	}
+}
+
+assemble.dependsOn assembleTranspiled
+
+
+
 // TODO xml-apis belegt namespaces org.w3c.dom und javax.xml.namespace
 // dies führt zu eclipse problemen (package accesible from more than one module),
 // allerdings nicht zu problemen im gradle build.
